public user callproc

--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -8,7 +8,6 @@
     Register {{ contest.cname }}
   </h3>
 </div>
-<hr>
 <div class="modal-body" id="register">
   <table width='100%'>
     <!--
@@ -53,7 +52,7 @@
       <form class="form-inline" method="POST" 
             action="{% url 'contest:register' contest.id %}">
         {% csrf_token %}
-        <label>How many Public Users do you need? You have {{ public_user }} now</label>
+        <label>How many Public Users do you need? You have {{ public_user }} now.</label>
         <br>
         <a id="public_user_now" hidden>{{ public_user }}</a>
         <input id="public_user_need" class="form-control" type="text" name="public_user" 
